--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale= 1.0" />
    <meta name="apple-mobile-web-app-capable" content="yes" />
    <title>App Name</title>
-   <script src="lib/requirejs/require.min.js" data-main="js/main.js"></script>
+   
  </head>
 </head>
-<body>
-<div ng-view class="ang_view" >
+<body ng-app="appname">
+<div ng-view class="ang_view" ></div>
+
+<script src="lib/jquery/jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="lib/jquery/jquery.ui.draggable.js" type="text/javascript"></script>
+<script src="lib/angular/angular.min.js" type="text/javascript"></script>
+<script src="lib/angular/angular-resource.min.js" type="text/javascript"></script>
+<script src="lib/angular/angular-route.min.js" type="text/javascript"></script>
+
+
+<script src="js/controllers/appcontroller.js" type="text/javascript"></script>
+<script src="js/directives/directives.js" type="text/javascript"></script>
+<script src="js/filters/filters.js" type="text/javascript"></script>
+<script src="js/services/services.js" type="text/javascript"></script>
+<script src="js/app.js" type="text/javascript"></script>
+
+
+
 </body>
 </html>
